@@ -1,3 +1,15 @@
+2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_inset), (clearlooks_draw_button),
+	(clearlooks_draw_entry), (clearlooks_draw_scale_trough),
+	(clearlooks_draw_progressbar_trough):
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_init_from_rc):
+	* themes/Clearlooks/gtk-2.0/gtkrc:
+
+	Fixed the shades calculations and did some polishing.
+
 2005-09-12  Richard A. Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
